maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:33: error: ')' expected but 'else' found.
   }else{
    ^